revisions to css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      href='https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap'
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css"/>
@@ -24,9 +24,11 @@
 
   <body>
     <header class="jumbotron">
+      <div class = 
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      </div>
     </header>
 
 <!---Followed bootstrap grid to faciliate layout of the day scheduler--->
